removed need for '--add-opens' JVM args for string templates, minor other changes